Logo: fix top from -10px to 0px to prevent clipping, CSS 2.4

--- a/themes/themeAba/style.css
+++ b/themes/themeAba/style.css
@@ -335,7 +335,7 @@ header .logo {
 	width: 145px;
 	height: 145px;
 	position: absolute;
-	top: -10px;
+	top: 0px;
 	left: -10px;
 	z-index: 20;
 }
